# nema

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  renovate.json
.github/workflows/: docker-publish.yml
src/: business_logic.rs  lib.rs  spec.rs
src/modrinth/: api.rs  model.rs
src/spec/: denylist.rs  lockfile.rs  manifest.rs  mod.rs
tests/: Modrinth-1_21_1.toml  Modrinth-1_21_4.toml  Modrinth.toml  modrinth_staging_api.rs
