[package]
name = "modrinth"
version = "0.1.0"
authors = ["Eleanor Young <developer@nausicaea.net>"]
edition = "2024"

[dependencies]
anyhow = { version = "1.0.98", default-features = false }
chrono = { version = "0.4.41", features = ["serde"], default-features = false }
clap = { version = "4.5.41", features = ["derive", "env", "help", "std"], default-features = false }
hex = { version = "0.4.3", features = ["alloc"], default-features = false }
reqwest = { version = "0.12.22", features = ["json", "default-tls"], default-features = false }
serde = { version = "1.0.219", features = ["derive"], default-features = false }
sha2 = { version = "0.10.9", default-features = false }
tokio = { version = "1.47.0", features = ["macros", "rt", "rt-multi-thread", "fs", "io-util"], default-features = false }
tokio-stream = { version = "0.1.17", default-features = false }
tokio-util = { version = "0.7.15", features = ["io"], default-features = false }
toml = { version = "0.9.2", features = ["serde", "display", "parse"], default-features = false }
tracing = { version = "0.1.41", features = ["attributes"], default-features = false }
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"], default-features = false }

[dev-dependencies]
rstest = "0.26.1"
tempfile = "3.20.0"

[profile.release]
panic = "abort"
